Proyecto/gateway/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: floresguamanmoralesnarvaez
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: kong
          image: api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8001
              name: admin
          volumeMounts:
            - name: kong-config-volume
              mountPath: /etc/kong/kong.yml
              subPath: kong.yml
          readinessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "15m"
            limits:
              memory: "384Mi"
              cpu: "150m"
      volumes:
        - name: kong-config-volume
          configMap:
            name: kong-declarative-config
