Proyecto/gateway/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: floresguamanmoralesnarvaez
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: proxy
      port: 9000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
